feat : 자동차 이동 기능 개발 및 리팩터링 완료