@@ -47,26 +47,25 @@ class ProcessTest {
   void carForwardTest() {
       gp.run(1, 10);
       while(true) {
-          gp.nextTurn();
-          if(gp.joinCars.get(0).loaction > 0) {
+          if(gp.joinCars().getFirst().findLocation() > 0) {
               break;
           }
       }
 
-      assertThat(gp.joinCars.get(0).loaction).isNotEqual(0);
+      assertThat(gp.joinCars().getFirst().findLocation()).isNotEqualTo(0);
   }
 
-  @Test
-  void carsForwardTest() {
-      gp.run(3, 10);
-      while(true) {
-          gp.nextTurn();
-          if(gp.joinCars.get(0).loaction > 2) {
-              break;
-          }
-      }
-      for(Car car : gp.joinCars){
-          assertThat(car.loaction).isNotEqual(0);
-      }
-  }
+ @Test
+ void carsForwardTest() {
+     gp.run(3, 10);
+     while(true) {
+         gp.nextTurn();
+         if(gp.joinCars.get(0).loaction > 2) {
+             break;
+         }
+     }
+     for(Car car : gp.joinCars){
+         assertThat(car.loaction).isNotEqual(0);
+     }
+ }
 }
